crates/plotnik-tests/tests/03-analyze/self_recursion/no_escape_in_node_child.txt
E = (call (E))
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:1:12
  |
1 | E = (call (E))
  |            ^
  |            |
  |            E references itself
  |
help: add an alternative to `E` that does not reference `E`
------------------ DEFINITIONS -------------------
E
  E (cycle)
